crates/loxide_interpreter/tests/snapshots/integration@operator__add_num_nil.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
1 + nil; // expect runtime error: Operands must be two numbers or two strings.


>>>>> Error Section <<<<<
  × Invalid binary operand, expected: number
   ╭────
 1 │ 1 + nil; // expect runtime error: Operands must be two numbers or two strings.
   ·     ─┬─
   ·      ╰── expect a number type here
   ╰────
